--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.11.1
+dj-database-url==3.1.0
 Django==6.0.2
 django-browser-reload==1.21.0
 django-environ==0.12.1
@@ -12,4 +13,3 @@ python-dotenv==1.2.1
 sqlparse==0.5.5
 tzdata==2025.3
 whitenoise==6.11.0
-dj-database-url
